src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Annual</fullName>
        <description>Sales process for End Users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Bring in Distributor - Joint Call %2F Put out to bid</fullName>
        </values>
        <values>
            <fullName>Closed%2FLost</fullName>
        </values>
        <values>
            <fullName>Closed%2FWon</fullName>
        </values>
        <values>
            <fullName>Fitting</fullName>
        </values>
        <values>
            <fullName>Initial Meeting Scheduled</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Wear Test</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Give%2FGet</fullName>
        <description>Sales process for Give/Get opportunties</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won Opportunity</fullName>
        </values>
        <values>
            <fullName>Closed%2FLost</fullName>
        </values>
        <values>
            <fullName>Identify and Quantify Opportunity</fullName>
        </values>
        <values>
            <fullName>Obtain internal approval</fullName>
        </values>
        <values>
            <fullName>Present opportunity to Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Industrial</fullName>
        <description>This process is for Industrial Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Bring in Distributor - Joint Call %2F Put out to bid</fullName>
        </values>
        <values>
            <fullName>Closed%2FLost</fullName>
        </values>
        <values>
            <fullName>Closed%2FWon</fullName>
        </values>
        <values>
            <fullName>Fitting</fullName>
        </values>
        <values>
            <fullName>Initial Meeting Scheduled</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Wear Test</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Non-Planning</fullName>
        <description>Sales process for Non Planning opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Customer Interaction</fullName>
        </values>
        <values>
            <fullName>Receive Plan%2FOrder</fullName>
        </values>
        <values>
            <fullName>Seasonal Preparation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Planning</fullName>
        <description>Sales process for Planning opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Customer Interaction</fullName>
        </values>
        <values>
            <fullName>Receive Plan%2FOrder</fullName>
        </values>
        <values>
            <fullName>Seasonal Preparation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Retail Marketing</fullName>
        <description>MDF or Merchandising for Trade Accounts</description>
        <isActive>true</isActive>
        <values>
            <fullName>6 - Closed Lost</fullName>
        </values>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed%2FWon</fullName>
        </values>
        <values>
            <fullName>Funded</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Proposed</fullName>
        </values>
        <values>
            <fullName>Results Captured</fullName>
        </values>
        <values>
            <fullName>T%2FA Deliverable Dates Agreed To</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Prep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Prep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Address__c</fullName>
        <formula>Account.ShippingStreet &amp;BR()
&amp; Account.ShippingCity &amp;&quot;, &quot;&amp; Account.ShippingState &amp; &quot; &quot;&amp; Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Investment__c</fullName>
        <label>Actual Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Align_Plan_with_Internal_Teams__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Align Plan with Internal Teams</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Program__c</fullName>
        <label>Bid Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Product_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business &amp; Product Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field is for Industrial team</description>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tops</fullName>
                    <label>First Layer Tops</label>
                </value>
                <value>
                    <fullName>Bottoms</fullName>
                    <label>First Layer Bottoms</label>
                </value>
                <value>
                    <fullName>Outerwear</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>TEXT( Account.Channel__c )</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Choice_Program__c</fullName>
        <label>Choice Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed/Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safety Specifications</fullName>
                </value>
                <value>
                    <fullName>Inability to Fill Demand</fullName>
                </value>
                <value>
                    <fullName>FR and Non FR Styles Compatibility</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer Denied</fullName>
                </value>
                <value>
                    <fullName>Manager Denied</fullName>
                </value>
                <value>
                    <fullName>Finance Denied</fullName>
                </value>
                <value>
                    <fullName>Sales Leadership Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Notes__c</fullName>
        <label>Competitive Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conduct_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduct Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Expires__c</fullName>
        <inlineHelpText>Date current contract expires</inlineHelpText>
        <label>Current Contract Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Original_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Original Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Spend__c</fullName>
        <inlineHelpText>For Carhartt contract renewals, what is the approximate annual spend currently?  In the Opportunity Amount, enter any INCREMENTAL revenue, if any.</inlineHelpText>
        <label>Current Annual Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Supplier__c</fullName>
        <inlineHelpText>Select the customer&apos;s current supplier, if known.</inlineHelpText>
        <label>Current Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aramark</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>Carhartt</fullName>
                </value>
                <value>
                    <fullName>Cintas</fullName>
                </value>
                <value>
                    <fullName>Dakota</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>G&amp;K</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Unifirst</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler</fullName>
                </value>
                <value>
                    <fullName>Other (enter below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_using_FR__c</fullName>
        <label>Currently using FR?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliver_Customer_Plan__c</fullName>
        <label>Deliver Customer Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliverable_Deadline__c</fullName>
        <description>Retail Marketing</description>
        <label>Deliverable Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Seasonal_Open_to_Buy_Account__c</fullName>
        <label>Develop Seasonal Open to Buy w/ Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Fitting_Date__c</fullName>
        <label>Estimated Fitting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Deadline__c</fullName>
        <description>Retail Marketing</description>
        <label>Execution Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Review/Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Commitments_Complete__c</fullName>
        <label>Firm Order Commitments Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Order__c</fullName>
        <label>Future Order?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <formula>TEXT (  Account.Geography__c )</formula>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_others_please_specify__c</fullName>
        <label>If others, please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_mention_brands__c</fullName>
        <label>If yes mention brands</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_mention_distributors__c</fullName>
        <label>If yes mention distributors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Season_Performance_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-Season Performance Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <inlineHelpText>This field is used to identify the amount of investment that is required to capture the &apos;get&apos; - this should provide a return of at least 4:1 within the fist year</inlineHelpText>
        <label>Investment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Criteria__c</fullName>
        <inlineHelpText>Select one or more decision criteria</inlineHelpText>
        <label>Key Decision Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Country of Origin</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Delivery/Lead Time</fullName>
                </value>
                <value>
                    <fullName>Durability</fullName>
                </value>
                <value>
                    <fullName>Political</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Safety Features</fullName>
                </value>
                <value>
                    <fullName>Unhappy w/ Current Contract</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDF_Market_Development_Funding__c</fullName>
        <label>MDF (Market Development Funding)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National Promo Support</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Paid Social</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SEM</fullName>
                </value>
                <value>
                    <fullName>E-commerce Updates</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Streaming Digital</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Custom &quot;Spend to Get&quot; Promotion</fullName>
                </value>
                <value>
                    <fullName>GWP</fullName>
                </value>
                <value>
                    <fullName>Product Seeding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100234-051</fullName>
                </value>
                <value>
                    <fullName>100234-410</fullName>
                </value>
                <value>
                    <fullName>100235-051</fullName>
                </value>
                <value>
                    <fullName>100235-250</fullName>
                </value>
                <value>
                    <fullName>100235-410</fullName>
                </value>
                <value>
                    <fullName>100235-465</fullName>
                </value>
                <value>
                    <fullName>100237-051</fullName>
                </value>
                <value>
                    <fullName>100237-250</fullName>
                </value>
                <value>
                    <fullName>100237-410</fullName>
                </value>
                <value>
                    <fullName>100237-465</fullName>
                </value>
                <value>
                    <fullName>100410-001</fullName>
                </value>
                <value>
                    <fullName>100410-026</fullName>
                </value>
                <value>
                    <fullName>100410-034</fullName>
                </value>
                <value>
                    <fullName>100410-316</fullName>
                </value>
                <value>
                    <fullName>100410-412</fullName>
                </value>
                <value>
                    <fullName>100432-001</fullName>
                </value>
                <value>
                    <fullName>100432-201</fullName>
                </value>
                <value>
                    <fullName>100432-316</fullName>
                </value>
                <value>
                    <fullName>100493-824</fullName>
                </value>
                <value>
                    <fullName>100493-323</fullName>
                </value>
                <value>
                    <fullName>100494-824</fullName>
                </value>
                <value>
                    <fullName>100494-323</fullName>
                </value>
                <value>
                    <fullName>100495-323</fullName>
                </value>
                <value>
                    <fullName>100495-824</fullName>
                </value>
                <value>
                    <fullName>100496-323</fullName>
                </value>
                <value>
                    <fullName>100496-824</fullName>
                </value>
                <value>
                    <fullName>100499-323</fullName>
                </value>
                <value>
                    <fullName>100501-323</fullName>
                </value>
                <value>
                    <fullName>100501-824</fullName>
                </value>
                <value>
                    <fullName>100503-323</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchandising__c</fullName>
        <label>Merchandising</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Door</fullName>
                </value>
                <value>
                    <fullName>Remodel</fullName>
                </value>
                <value>
                    <fullName>Bottoms Reset</fullName>
                </value>
                <value>
                    <fullName>High Traffic/High Impressions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Contract_End_Date__c</fullName>
        <inlineHelpText>Date new contract will end, whether for Carhartt or a competitor - this will be copied back to the Account after Closed Won or Closed Lost.</inlineHelpText>
        <label>New Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_step__c</fullName>
        <inlineHelpText>Enter date of update and next step(s)</inlineHelpText>
        <label>Next step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-FR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Employees_to_Outfit__c</fullName>
        <inlineHelpText>Total number of employees that will be outfitted with FR</inlineHelpText>
        <label># of Employees to Outfit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Wearers__c</fullName>
        <label>Number of Wearers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type_From_Prospect__c</fullName>
        <label>Opportunity Type (From Prospect)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <inlineHelpText>If competitor is not on list, enter the name(s) here.</inlineHelpText>
        <label>Other Competitor(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partnership Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Season_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Season Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <inlineHelpText>Select the primary competitor for this deal.</inlineHelpText>
        <label>Primary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aramark</fullName>
                </value>
                <value>
                    <fullName>Bulwark</fullName>
                </value>
                <value>
                    <fullName>Cintas</fullName>
                </value>
                <value>
                    <fullName>Dakota</fullName>
                </value>
                <value>
                    <fullName>DriFire</fullName>
                </value>
                <value>
                    <fullName>G&amp;K</fullName>
                </value>
                <value>
                    <fullName>Lapco</fullName>
                </value>
                <value>
                    <fullName>NSA</fullName>
                </value>
                <value>
                    <fullName>Rasco</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Tyndale</fullName>
                </value>
                <value>
                    <fullName>Unifirst</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Workrite</fullName>
                </value>
                <value>
                    <fullName>Wrangler</fullName>
                </value>
                <value>
                    <fullName>Other (enter below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <inlineHelpText>Select one or more products</inlineHelpText>
        <label>Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outerwear</fullName>
                </value>
                <value>
                    <fullName>Pants</fullName>
                </value>
                <value>
                    <fullName>Shirts</fullName>
                </value>
                <value>
                    <fullName>Bibs &amp; Coveralls</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Launch_Date__c</fullName>
        <description>This field is for Industrial Choice/Bid Program Launch Date</description>
        <label>Program Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Investment__c</fullName>
        <inlineHelpText>This field is used to identify the amount of investment that is required to capture the &apos;get&apos; - this should provide a return of at least 4:1 within the first year</inlineHelpText>
        <label>Proposed Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_for_Buying__c</fullName>
        <inlineHelpText>Select primary reason for buying FR</inlineHelpText>
        <label>Reason for Buying</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safety Change</fullName>
                </value>
                <value>
                    <fullName>New Employees</fullName>
                </value>
                <value>
                    <fullName>Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>Restock</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>TEXT(  Account.Sales_Office__c )</formula>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stipend__c</fullName>
        <label>Stipend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Style_Information_Details__c</fullName>
        <label>Style Information Details</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <inlineHelpText>in months</inlineHelpText>
        <label>Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Industry_Market__c</fullName>
        <label>Type of Industry/Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Petrochemical</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Uniform</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Home Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>